<resources>
    <string name="app_name">beatPolice</string>
    <string name="title_activity_home_page">beatPolice</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="tag_this_">Tag this location</string>
    <string name="outside_your_">Outside your alloted area</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="verified">Verified</string>
    <string name="report_issue">Report issue</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="neighbour">Neighbour</string>
    <string name="submit">Submit</string>
    <string name="neighbour_phone">Neighbour phone</string>
    <string name="image_not_available">Image Not Available</string>
    <string name="you_are_">You are outside your alloted area</string>
    <string name="please_be">Please be inside your alloted area</string>
    <string name="cancel">Cancel</string>
    <string name="normal_tag">Normal Tag</string>
    <string name="senior_citizen">Senior citizen</string>
    <string name="permission_denied">Permission denied</string>
    <string name="both_fields_">Both fields are required</string>
    <string name="name_and_mobile_">Name and mobile are required</string>
    <string name="enter_valid_">Enter valid phone number</string>
    <string name="enter_valid_neighbour_">Enter valid neighbour number</string>
    <string name="add_neighbour_">Add neighbour name first</string>
    <string name="image_is_">Image is required</string>
    <string name="no_issue_to_be_synced">No issue to be synced</string>
    <string name="no_todo_to_be_synced">No todo to be synced</string>
</resources>
