<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TagsRelated.NormalTagInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@mipmap/image_not_available"
            android:background="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/page_left_margin"
            android:layout_marginTop="@dimen/margin_between_views"
            android:layout_marginRight="@dimen/page_right_margin"
            android:orientation="vertical">

            <TextView
                style="@style/text_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/title"
                style="@style/text_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <View style="@style/view"/>

            <TextView
                android:layout_marginTop="8dp"
                style="@style/text_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <TextView
                android:id="@+id/des"
                style="@style/text_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <View style="@style/view"/>


        </LinearLayout>


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/report_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/page_top_margin"
            android:layout_marginLeft="@dimen/page_right_margin"
            android:layout_marginRight="@dimen/page_right_margin"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/verified"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/verified"
                style="@style/button_1"/>

            <TextView
                android:id="@+id/report_issue"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginLeft="8dp"
                android:text="@string/report_issue"
                style="@style/button_2"/>

        </LinearLayout>



    </RelativeLayout>

    <ProgressBar
        android:id="@+id/image_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"/>
</FrameLayout>