<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f8f9f9"
    tools:context=".TagsRelated.SSTagInfo">


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:text="Seniour Citizen"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="@font/gotham_medium_regular"/>



    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_marginTop="57dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/toolbar_height"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/white"
            android:src="@mipmap/image_not_available" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/page_left_margin"
                android:layout_marginTop="@dimen/margin_between_views"
                android:layout_marginRight="@dimen/page_right_margin"
                android:orientation="vertical">

                <TextView
                    style="@style/text_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/name"
                    style="@style/text_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Pratap Kushwaha" />

                <View style="@style/view" />


                <TextView
                    android:layout_marginTop="@dimen/margin_top2"
                    style="@style/text_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone" />

                <TextView
                    android:id="@+id/phone"
                    style="@style/text_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="7907877801"
                    android:drawableRight="@drawable/call"/>

                <View style="@style/view" />


                <TextView
                    style="@style/text_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender" />

                <TextView
                    android:id="@+id/gender"
                    style="@style/text_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Male" />

                <View style="@style/view" />


                <TextView
                    style="@style/text_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top2"
                    android:text="@string/neighbour" />

                <TextView
                    android:id="@+id/n_name"
                    style="@style/text_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Pratap Kushwaha" />

                <View style="@style/view" />


                <TextView
                    style="@style/text_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top2"
                    android:text="@string/neighbour_phone" />

                <TextView
                    android:id="@+id/n_phone"
                    style="@style/text_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="7907877801"
                    android:drawableRight="@drawable/call"/>

                <View style="@style/view"
                    android:layout_marginBottom="16dp"/>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>


    <!--Bottom buttoms-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View style="@style/view" />

        <LinearLayout
            android:id="@+id/report_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/page_left_margin"
            android:paddingTop="@dimen/page_top_margin"
            android:paddingRight="@dimen/page_right_margin"
            android:paddingBottom="@dimen/page_bottom_margin">

            <TextView
                android:id="@+id/verified"
                style="@style/button_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/verified" />

            <TextView
                android:id="@+id/report"
                style="@style/button_2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:text="@string/report_issue" />

        </LinearLayout>


    </RelativeLayout>

    <!--progress bar for image loading-->
    <ProgressBar
        android:id="@+id/image_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp" />


</FrameLayout>